# molecule-slide-generator

./: .gitignore  README.md  environment.yml  license.txt  setup.cfg  setup.py  slide_generator.py
molecule_slide_generator/: __init__.py  data_extraction.py  slide_generator.py
tests/: bzr21.sdf  tests.py
