[metadata]
name = molecule-slide_generator
version = 0.1.0
author = Joos Kiener
author_email = joos.kiener@gmail.com
description = Generate images of molecules and their properties for use in presentations and reports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kienerj/molecule-slide-generator
project_urls =
    Bug Tracker = https://github.com/kienerj/molecule-slide-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
install_requires =    
    numpy
    pillow